--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
             </div>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <button type="submit" class="btn btn-success justify-content-center" >Entrar</button>
           </form>
     </div>
 
