--- a/src/login.html
+++ b/src/login.html
@@ -13,25 +13,33 @@
 </head>
 <body class="ubuntu-light">
     <div class="container-fluid">
-        <form class="mx-auto">
+        <form class="mx-auto" id="forms">
             <h4 class="text-center">Login</h4>
             <div class="mb-3 mt-5">
-              <label for="exampleInputEmail1" class="form-label">Usuário</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <label for="exampleInputEmail1" class="form-label">E-mail</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" onchange="validarCampos()">
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-              <div id="emailHelp" class="form-text">Esqueci a senha</div>
+              <label for="senha" class="form-label">Senha</label>
+              <input type="password" class="form-control" id="senha" onchange="validarCampos()">
+              <div id="emailHelp" class="form-text">
+                <button type="button" id="recuperarSenha" disabled="true">Esqueci a senha</button>
+              </div>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
             </div>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <button type="submit" class="btn btn-primary" disabled ="true" id="login">Entrar</button>
+            <div>
+              <h1 class="erros"></h1>
+            </div>
           </form>
     </div>
 
+    <script src="assets/login.js">
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
